# RuneLauncher

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs  runner.rs
src-tauri/src/commands/: auth_commands.rs  mod.rs
src-tauri/src/state/: auth.rs
src/components/: AnimatedBackground.tsx  LauncherHeader.tsx  LoadingSpinner.tsx  Sidebar.tsx
src/components/layout/: AppLayout.tsx  Titlebar.tsx
src/components/tabs/: TabContent.tsx
src/components/tabs/accounts/: AccountCard.tsx  AccountsTab.tsx  AddAccountDialog.tsx  CharacterCard.tsx
src/pages/: Launcher.tsx
src/styles/: globals.css
window-capture/: Cargo.toml  README.md  USAGE.md  build.rs
window-capture/src/: app.rs  capture.rs  main.rs  window_finder.rs
